--- a/Hippo/UIView/TableViewCell/AudioFileCell/OutgoingAudioTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/AudioFileCell/OutgoingAudioTableViewCell.xib
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +31,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="82.5"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AudioIcon" translatesAutoresizingMaskIntoConstraints="NO" id="LX4-ys-MnO">
-                                                <rect key="frame" x="0.0" y="31" width="34" height="21"/>
+                                                <rect key="frame" x="0.0" y="33.5" width="34" height="16"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="34" id="aW1-IS-4Tv"/>
                                                 </constraints>
@@ -186,7 +182,7 @@
                             <constraint firstAttribute="bottom" secondItem="Ic1-Mf-yX1" secondAttribute="bottom" constant="5" id="rVG-rD-QRG"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="_cornerRadius">
+                            <userDefinedRuntimeAttribute type="number" keyPath="hippoCornerRadius">
                                 <real key="value" value="5"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
@@ -202,7 +198,7 @@
                                     <constraint firstAttribute="width" constant="30" id="y2h-uq-INd"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="_cornerRadius">
+                                    <userDefinedRuntimeAttribute type="number" keyPath="hippoCornerRadius">
                                         <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
