--- a/Hippo/UIView/TableViewCell/ActionableMessageTableCell/ActionableMessageTypeCell/ItemTableViewCell/ItemTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/ActionableMessageTableCell/ActionableMessageTypeCell/ItemTableViewCell/ItemTableViewCell.xib
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="HippoChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tp4-lX-qoU">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipf-7M-2Vb">
-                                <rect key="frame" x="10" y="2.5" width="254.5" height="36"/>
+                                <rect key="frame" x="10" y="2.5" width="145" height="36.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-GZ-3Rm">
-                                <rect key="frame" x="274.5" y="12" width="35.5" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-GZ-3Rm">
+                                <rect key="frame" x="165" y="2.5" width="145" height="36.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -36,11 +34,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cd2-GZ-3Rm" firstAttribute="centerY" secondItem="Ipf-7M-2Vb" secondAttribute="centerY" id="Oyf-Cw-Bfc"/>
+                            <constraint firstItem="cd2-GZ-3Rm" firstAttribute="bottom" secondItem="Ipf-7M-2Vb" secondAttribute="bottom" id="RZy-Y6-XmK"/>
                             <constraint firstItem="Ipf-7M-2Vb" firstAttribute="leading" secondItem="tp4-lX-qoU" secondAttribute="leading" constant="10" id="Ta1-Ts-FA4"/>
                             <constraint firstItem="Ipf-7M-2Vb" firstAttribute="top" secondItem="tp4-lX-qoU" secondAttribute="top" constant="2.5" id="Tdk-kx-EZe"/>
+                            <constraint firstItem="Ipf-7M-2Vb" firstAttribute="width" secondItem="cd2-GZ-3Rm" secondAttribute="width" id="Tyw-X5-ChS"/>
+                            <constraint firstItem="cd2-GZ-3Rm" firstAttribute="top" secondItem="Ipf-7M-2Vb" secondAttribute="top" id="UNP-4c-r0y"/>
                             <constraint firstAttribute="trailing" secondItem="cd2-GZ-3Rm" secondAttribute="trailing" constant="10" id="a7Y-A4-0ee"/>
-                            <constraint firstItem="cd2-GZ-3Rm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ipf-7M-2Vb" secondAttribute="trailing" constant="10" id="mVH-ym-RxM"/>
+                            <constraint firstItem="cd2-GZ-3Rm" firstAttribute="leading" secondItem="Ipf-7M-2Vb" secondAttribute="trailing" constant="10" id="mVH-ym-RxM"/>
                             <constraint firstAttribute="bottom" secondItem="Ipf-7M-2Vb" secondAttribute="bottom" constant="5" id="nyy-UM-Eqn"/>
                         </constraints>
                     </view>
@@ -58,6 +58,7 @@
                 <outlet property="itemDescriptionLabel" destination="Ipf-7M-2Vb" id="2oN-tg-5xf"/>
                 <outlet property="itemPriceLabel" destination="cd2-GZ-3Rm" id="wnw-IN-rVZ"/>
             </connections>
+            <point key="canvasLocation" x="141" y="138"/>
         </tableViewCell>
     </objects>
 </document>
